<resources>
    <string name="app_name">3WiFi Locator V2 Unofficial</string>
    <string name="app_version" translatable="false">2.2</string>
    <string name="SERVER_URI_DEFAULT" translatable="false">http://3wifi.stascorp.com</string>
    <string name="GITHUB_START_URI" translatable="false">https://github.com/LowSkillDeveloper/3WiFiLocator-Unofficial</string>
    <string name="TELEGRAM_START_URI" translatable="false">https://t.me/routerscan</string>
    <string name="SERVERS_LIST_URL" translatable="false">https://raw.githubusercontent.com/LowSkillDeveloper/3WiFiLocator-Unofficial/master-v2/servers.json</string>
    <string name="DEFAULT_DATE_FORMAT" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string-array name="strings_settings_rows">
        <item>Locator Settings</item>
        <item>Other Settings</item>
        <item>About app</item>
        <item>GitHub Project Page</item>
        <item>Check app updates</item>
        <item>Logout</item>
    </string-array>
        <string name="backup_database">Backup Database</string>
        <string name="restore_database">Restore Database</string>
        <string name="select_sqlite_file">Select SQLite File</string>
        <string name="restore_database_confirmation">Are you sure you want to restore the database? This will overwrite the current database.</string>
        <string name="backup_failed">Backup failed: %1$s</string>
        <string name="backup_successful">Database backed up to: %1$s</string>
        <string name="restore_failed">Restore failed: %1$s</string>
        <string name="restore_successful">Database restored successfully</string>
        <string name="restore_database_title">Restore Database</string>
        <string name="database_optimized">Database Optimized</string>
        <string name="duplicates_removed">Duplicates Removed</string>
        <string name="warning_essid_not_supported">Not all servers support ESSID search.</string>
        <string name="search_by_essid">Search by ESSID</string>
        <string name="enter_essid">Enter ESSID</string>
        <string name="switch_mode_text">Search by name</string>
    <string name="search_enabled_message">Search by BSSID and ESSID enabled in local DB</string>
    <string name="search_disabled_message">Search only by BSSID</string>
    <string name="dont_show_again">Temporarily do not show (%1$d дней)</string>
    <string name="copy_api_keys">Copy API Keys</string>
    <string name="dark_mode">Dark mode</string>
    <string name="action_view_db">View local database</string>
    <string name="import_database">Import DB from json file</string>
    <string name="export_database">Export DB to json file</string>
    <string name="clear_database">CLEAR ALL DATABASE</string>
    <string name="search_hint">Search in local database</string>
    <string name="database_import_successful">Database import successful</string>
    <string name="error_importing_database">Error importing database</string>
    <string name="failed_to_open_file">Failed to open file</string>
    <string name="error_importing_file">Error importing file</string>
    <string name="clear_database_txt">Clear Database</string>
    <string name="Are_you_sure_clear_database">Are you sure you want to clear the entire database? This action cannot be undone.</string>
    <string name="database_cleared_successfully">Database cleared successfully.</string>
    <string name="database_exported_successfully_to">Database exported successfully to</string>
    <string name="error_exporting_database">Error exporting database</string>
    <string name="database_management_menu">Database management menu</string>
    <string name="select_csv_file">Select CSV File</string>
    <string name="export_to_csv">Export to CSV File</string>
    <string name="import_from_csv">Import from CSV File</string>
    <string name="change_server">Change server</string>
    <string name="specify_own_server">Enter your server</string>
    <string name="enter_server_address">Enter server address</string>
    <string name="current_server">Current server:</string>
    <string name="app_version_txt">App version:</string>
    <string name="offline_mode">Offline mode</string>
    <string name="clear_server_list">Clear Server List</string>
    <string name="update_server_list">Update Servers List</string>
    <string name="select_import_type">Select import type</string>
    <string name="update_existing_database">Update existing database</string>
    <string name="replace_database">Replace existing database</string>
    <string name="wps_connection_started">WPS connection started</string>
    <string name="wps_connection_succeeded">WPS connection succeeded</string>
    <string name="wps_connection_failed">WPS connection failed with reason: %1$d</string>
    <string name="wps_not_supported">WPS not supported on this device</string>
    <string name="no_wps_pin_available">No WPS PIN available</string>
    <string name="copy_essid">Copy ESSID</string>
    <string name="copy_bssid">Copy BSSID</string>
    <string name="copy_password">Copy Password</string>
    <string name="copy_wps_pin">Copy WPS PIN</string>
    <string name="connect_using_wps">Connect using WPS… (without root)</string>
    <string name="unknown_network">Unknown Network</string>
    <string name="label_copied_to_clipboard">%1$s copied to clipboard</string>
    <string name="generate_wps_pin">Generate WPS PIN</string>
    <string name="add_network_manually">Manually add network to DB</string>
    <string name="ssid" translatable="false">SSID</string>
    <string name="bssid" translatable="false">BSSID</string>
    <string name="password">Password</string>
    <string name="wps_pin" translatable="false">WPS PIN</string>
    <string name="admin_login">Router login</string>
    <string name="admin_pass">Router password</string>
    <string name="error_empty_ssid_bssid">Please enter either SSID or BSSID</string>
    <string name="copy_router_login">Copy Router Login</string>
    <string name="copy_router_password">Copy Router Password</string>
    <string name="import_routerscan">Import txt from RouterScan</string>
    <string name="import_error">Import error: %1$s</string>
    <string name="importing_data">Importing data…</string>
    <string name="import_complete">Import complete!</string>
    <string name="importing_large_amount">Perhaps many rows are being imported or the database already contains many rows and is being checked for duplicates, this may take 5–10 minutes or more…</string>
    <string name="exporting_data">Exporting data…</string>
    <string name="delete_network">Delete Network from DB</string>
    <string name="confirm_deletion_message">Are you sure you want to delete the %1$s network?</string>
    <string name="network_deleted">Network deleted</string>
    <string name="save_to_local_database">Save data to a local database</string>
    <string name="edit_network">Edit data of this network</string>
    <string name="github_txt">GitHub Project page</string>
    <string name="telegram_txt">Official telegram channel</string>
    <string name="available_locally">Available locally</string>
    <string name="found_in_local_db">Data from local DB</string>
    <string name="auto_search_local_db">Search in local DB after 3WiFi</string>
    <string name="action_check_local_db">Check in local DB</string>
    <string name="start_check_local_db">Searching in the local database…</string>
    <string name="status_waiting_for_second_scan">Waiting for second scan…</string>
    <string name="switch_primary_button">Make the local DB search button primary</string>
    <string name="switch_use_custom_host_label">Adding 3wifi.stascorp.com to the POST request for 134.0.119.34</string>
    <string name="start_important_message">Important message due to access issues</string>
    <string name="start_msg_custom_host">It is recommended to specify the IP address of the 3wifi server in the server field, instead of using the domain name, which is currently not accessible. This will allow direct requests to the 3wifi.stascorp.com server, as the application automatically adds the domain name in POST requests.\n\nNo need to use an external proxy server for redirection to the main server anymore. Most importantly, you can always change the server on the main page or disable the addition of the HOST header in POST requests in the application settings.\n\nSimply select http://134.0.119.34 from the list of servers — this is the IP address of the 3wifi.stascorp.com site.</string>
    <string name="wip_gps_sniff">GPS Sniff feature under development (WIP)</string>
    <string name="wip_router_keygen">Password generation function using RouterKeygen algorithms in development (WIP)</string>
    <string name="message_nolocation_permissions">WiFi on newer versions of Android requires location permission to work</string>
    <string name="download_button_label">Download File</string>
    <string name="download_file_success">File downloaded and saved to Downloads successfully</string>
    <string name="download_file_error">Error while downloading the file</string>
    <string name="no_cached_data">Cached data not available</string>
    <string name="label_encryption">Encryption: </string>
    <string name="label_authentication">Authentication: </string>
    <string name="easter_egg">Don\'t click too hard, or you\'ll break it!</string>
    <string name="optimize_database">Optimize Database</string>
    <string name="remove_duplicates">Remove Duplicates</string>
    <string name="api">API</string>
    <string name="hint_api_key">Enter your Read API Key</string>
    <string name="unable_save_api_key">Unable to save API key</string>
    <string name="open_3wifi_webview">Open 3WiFi site in WebView</string>
    <string name="fetchBssid">Finding BSSID in the 3WiFi</string>
    <string name="fetchEssid">Finding ESSID in the 3WiFi</string>
    <string name="Search_in_3WiFi">Search in 3WiFi</string>
    <string name="error_request">Error in request: </string>
    <string name="error_generic">Error: </string>
    <string name="data_not_found">Data not found</string>
    <string name="error_processing_response">Error processing response: </string>
    <string name="search_by_bssid">Search by BSSID</string>
    <string name="enter_bssid">Enter BSSID</string>
    <string name="loading">Loading…</string>
    <string name="no_map_app">No map application found</string>
    <string name="add_to_local_db">Add to Local DB</string>
    <string name="network_added">Network added to local DB.</string>
    <string name="show_on_map">Show on map</string>
    <string name="api_txt">API Keys</string>
    <string name="logout_txt">Change your account:</string>
    <string name="logout_btn_txt">Logout from this account</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="label_start">The RouterScan project will live forever</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_offline">Offline</string>
    <string name="button_start_app">Start!</string>
    <string name="button_user_info">User info</string>
    <string name="status_signing_in">Signing in…</string>
    <string name="toast_no_api_keys">No API keys received</string>
    <string name="status_no_internet">No internet connection</string>
    <string name="dialog_work_offline">Do you want to work in offline mode?</string>
    <string name="action_router_keygen" translatable="false">Router keygen (WIP)</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_gps_sniff">GPS sniff</string>
    <string name="hint_enter_essid">ESSID</string>
    <string name="save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_monitor_network">Monitor a network…</string>
</resources>