<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_network_manually"
        android:title="@string/add_network_manually" />

    <item
        android:id="@+id/export_database"
        android:title="@string/export_database"
       />

    <item
        android:id="@+id/import_database"
        android:title="@string/import_database"
        />

    <item
        android:id="@+id/import_routerscan"
        android:title="@string/import_routerscan"
        />

    <item
        android:id="@+id/optimize_database"
        android:title="@string/optimize_database" />

    <item
        android:id="@+id/remove_duplicates"
        android:title="@string/remove_duplicates" />

    <item
        android:id="@+id/clear_database"
        android:title="@string/clear_database"
        />

    <item
        android:id="@+id/export_to_csv"
        android:title="@string/export_to_csv"/>

    <item
        android:id="@+id/import_from_csv"
        android:title="@string/import_from_csv"/>

    <item
        android:id="@+id/backup_database"
        android:title="@string/backup_database"/>

    <item
        android:id="@+id/restore_database"
        android:title="@string/restore_database"/>
</menu>