<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/button_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_router_keygen"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/action_router_keygen"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_check_local_db"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_check_local_db"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/action_gps_sniff"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/button_gps_sniff"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_view_db"
        android:title="@string/action_view_db"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_monitor_network"
        android:title="@string/action_monitor_network"
        app:showAsAction="never"/>
    <item
        android:id="@+id/app_bar_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
