<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/ssid_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ssid" />

    <EditText
        android:id="@+id/bssid_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bssid" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/wps_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wps_pin" />

    <EditText
        android:id="@+id/admin_login_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_login" />

    <EditText
        android:id="@+id/admin_pass_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_pass" />

</LinearLayout>