<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/rootLayout"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:weightSum="1"
	android:gravity="center_horizontal|center_vertical">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:gravity="center_horizontal">

		<ImageView
			android:layout_width="150dp"
			android:layout_height="130dp"
			android:id="@+id/imageView"
			android:src="@drawable/logo"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_start"
			android:id="@+id/textView2"
			android:padding="20dp"/>
	</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:paddingLeft="10dp"
		android:paddingRight="10dp">

		<TextView
			android:id="@+id/txtCurrentServer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Текущий сервер: "
			android:layout_marginTop="10dp"
			android:layout_gravity="center_horizontal"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp">

			<Spinner
				android:id="@+id/spinnerServer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>

			<Button
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/save"
				android:id="@+id/btnSaveServerUri"
				android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:hint="@string/hint_username"
				android:id="@+id/edtLogin"
				android:inputType="textNoSuggestions"
				android:maxLines="1"
				android:singleLine="true"/>
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:hint="@string/hint_password"
				android:id="@+id/edtPassword"
				android:inputType="textPassword"
				android:maxLines="1"
				android:singleLine="true"/>
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:weightSum="1"
			android:id="@+id/llStartMenu"
			android:visibility="gone">

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_user_info"
				android:id="@+id/btnUserInfo"
				android:layout_weight="0.15"/>

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_start_app"
				android:id="@+id/btnStart"
				android:layout_weight="0.85"/>
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center_horizontal">

			<Button
				android:id="@+id/btnGetApiKeys"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/button_sign_in"
				android:visibility="visible" />

			<Button
				android:id="@+id/btnOfflineMode"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="Offline mode" />
		</LinearLayout>

		<Button
			android:id="@+id/btnClearServerList"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Clear Server List"
			android:visibility="visible" />

		<Button
			android:id="@+id/btnUpdateServerList"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Update Servers List"
			android:visibility="gone" />

		<LinearLayout
			android:id="@+id/layoutPadding"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal"
			android:padding="50dp"/>
	</LinearLayout>
</LinearLayout>